--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="col-md-10 main-title">
           <h1>Website</h1>
           <h2>under construction</h2>
+          <h2>Est. Launch Date 01 May 2023</h2>
         </div>
       </div>
       <div class="row align-items-center">
@@ -249,7 +250,7 @@
     </div>
       <footer class="footer">
         <div class="container text-center">
-          <span>your-website-name.com</span>
+          <span>epicswap.app</span>
         </div>
       </footer>
 
